# heather.github.io

./: .atom-build.yml  .gitignore  .stylish-haskell.yaml  404.html  FPFriday.html  FPWednesday.html  README.md  atom.xml  commit.cmd  darcs-build.cmd  dart-build.cmd  index.html  keybase.txt  pubspec.yaml  shake.it.hs  update.cmd  update.sh
bootstrap/: 404.js
clay/: default.css  index.css
css/: 404.css  default.css  entypo.css  hasklig.css  index.css  lena.css  octicons.css
dart/: filter.dart
donate-bitcoin/: index.js
js/: 404.js  auto.js  bubbles.js  eyes.js  light.js  playpause.js  youtube.js  youtube404.js
posts/: 2013-01-01-F# CSS EDSL.html  2013-01-01-FSharp CSS EDSL.html  2014-06-19-hakyll-and-clay.html  2014-06-19-hire-me.html  2014-06-19-test.html  2014-06-20-hakyll-and-clay.html  2014-06-20-hire-me.html  2014-06-20-this website architecture.html  2014-06-25-excel from fsharp.html  2014-06-25-idris.html  2014-06-27- I feel like I do all the things completely wrong.html  2014-06-27-Idris Effects.html  2014-08-19-Async Reactive Haskell.html  2014-10-20-Imprerative bits of Haskell.html  2014-10-30-hjsmin.html  2014-10-30-hsjsmin.html  2014-12-10-Qt Widgets.html  2014-12-29-Python SmartShell.html  2015-01-19-Idris Yaml.html  2015-02-07-Perfume.html  2015-03-27-Dependent Types.html  2015-08-27-FSharp Light.html  2015-10-12-Modern Logging.html  2016-01-16-Haskell disorder.html  2016-01-25-Everything about genders.html  2016-02-09-Shake it off & Sharingan.html  2016-07-28-Gentoo-LXC.html  (+1 more)
src/hs/: build.bat  site.cabal  site.hs  stack.yaml
web/: angular.dart  (+10 more)
(+52 files in other folders)
